--- a/src/pages/Login/style.module.css
+++ b/src/pages/Login/style.module.css
@@ -1,4 +1,5 @@
 :root { --header-heaight: 85px }
+.container { min-width: 1200px; }
 /* Header */
 .header { height: var(--header-heaight); padding: 0 160px; background-color: #ECEBF5; display: flex; justify-content: space-between; align-items: center; }
 .headerLeft { display: flex; align-items: center; }
@@ -7,17 +8,20 @@
 .sellerCenter { font-size: 18px; font-weight: 700; }
 /* Main */
 .main { height: calc(100vh - var(--header-heaight)); padding: 0 240px; display: flex; justify-content: space-between; align-items: center; background-color: #100D25; }
-.mainLogoContainer { width: 400px; height: 450px; display: flex; align-items: center; }
-.mainLogo { width: 100%; }
+.mainContainer { margin: auto; display: flex; }
+.mainLogo { width: 400px; height: 450px; object-fit: contain; }
 /* Login Form */
-.loginContainer { width: 400px; height: 450px; padding: 0 30px; background-color: #ECEBF5; border-radius: 5px; }
+.loginContainer { width: 400px; height: 450px; margin-left: 80px; padding: 0 30px; background-color: #ECEBF5; border-radius: 5px; }
 /* Login Form: <<<Header>>> */
 .loginHeader { padding: 24px 0; font-size: 20px; }
 /* Login Form: <<<Main>>> */
 .loginMain { margin-bottom: 30px; }
-.loginKey, .password { height: 40px; margin-bottom: 30px; background-color: white; border: 1px solid rgba(0,0,0,0.2); box-shadow:inset 0 2px 0 rgba(0, 0, 0, 0.02); display: flex; position: relative; }
+.loginKey, .password { height: 40px; background-color: white; border: 1px solid rgba(0,0,0,0.2); box-shadow:inset 0 2px 0 rgba(0, 0, 0, 0.02); display: flex; position: relative; }
 .loginKeyInput, .passwordInput { width: 100%; padding: 12px; border: 0; outline: 0; }
 .loginKeyInput:focus, .passwordInput:focus { outline: 1px solid black; }
+.inputWarning { background-color: #ffeaed; border: 1px solid #ff424f; }
+.inputWarning:focus { outline:none; }
+.textWarning { width: 100%; height: 21px; padding-top: 5px ; margin-bottom: 10px; color: #ff424f; font-size: 12px; }
 /* Toggle Password */
 .eyeContainer { position: absolute; right: 10px; top: 50%; transform: translateY(-50%); cursor: pointer; }
 .eye { font-size: 18px; cursor: pointer; }
@@ -36,14 +40,14 @@
 .thirdPartyLogo { width: 16px; height: 16px; margin-right: 5px; }
 /* Login Form: <<<Footer>>> */
 .loginFooter { font-size: 14px; text-align: center; }
-.registerRedirectText {color: #b4b4b4;}
+.registerRedirectText { color: #b4b4b4; }
 /* Footer */
 .footer { padding: 10px 160px; background-color: #ECEBF5; }
 .platformInfo { display: flex; justify-content: space-evenly; }
 .payment, .logistic, .socialMedia { width: 360px; }
 .catName { margin-bottom: 10px; }
 .images { height: 60px; margin-bottom: 10px; display: flex; justify-content: space-evenly; }
-.image { width: 100px; padding: 5px; background-color: white; border-radius: 10px; object-fit: contain; cursor: pointer; }
+.image { width: 80px; padding: 5px; background-color: white; border-radius: 10px; object-fit: contain; cursor: pointer; }
 .link { display: flex; justify-content: center; align-items: center; }
 .icon { width: 100px; font-size: 50px; }
 .companyInfo { padding-top: 10px; color: gray; border-top: 1px solid gray; display: flex; justify-content: space-evenly; }
