--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * { box-sizing: border-box; font-family: Arial, Helvetica, sans-serif; }
 body { margin: 0; }
-.hide { display: none; }
+/* Default <a> Styling */
 a { color: #219ebc; text-decoration: none; cursor: pointer; }
 a:hover { filter: brightness(70%); }
