--- a/src/components/Sign/Header/style.module.css
+++ b/src/components/Sign/Header/style.module.css
@@ -3,4 +3,4 @@
 .headerLeft { display: flex; align-items: center; }
 .headerLogo { height: 70px; cursor: pointer; }
 .pageName { margin-left: 10px; font-size: 24px; font-weight: 700; }
-.sellerCenter { font-size: 18px; font-weight: 700; }
+.memberCenter { font-size: 18px; font-weight: 700; }
