--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -2,8 +2,20 @@
 .nav { width: 1216px; height: 35px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; }
 .navLeft { width: 350px; display: flex; justify-content: space-evenly; }
 .navText, .register, .login { font-size: 13px; color: #ECEBF5!important; }
-.login { margin-left: 10px; }
 .socialMedia { font-size: 18px; color: #ECEBF5!important; }
-.headerSearch { height: 85px; display: flex; justify-content: center; align-items: center; }
-.headerLogo { height: 75px; }
-.cart { color: #ECEBF5; }
+.login { margin-left: 10px; }
+.profileLink { display: flex; }
+.profileLink { color: #ECEBF5; text-decoration: none; cursor: pointer; }
+.profileLink:hover { filter: brightness(70%); }
+.avatar { width: 20px; height: 20px; border-radius: 50%; object-fit: contain; }
+.username { margin-left: 10px; }
+.homeLink { height: 70px; }
+.headerLogo { height: 70px; object-fit: contain; }
+.headerSearch { width: 1216px; height: 85px; margin: 0 auto; display: flex; justify-content: center; align-items: center; }
+.searchContainer { width: 840px; height: 40px; display: flex; justify-content: space-between; align-items: center; background-color: #ECEBF5; }
+.searchInput { width: 100%; height: 100%; padding: 0 10px; font-size: 14px; border: none; background-color: #ECEBF5; }
+.searchInput:focus { outline: none; }
+.searchButton { width: 60px; height: 34px; margin: 5px; padding: 15px 0; display: flex; justify-content: center; align-items: center; background-color: #100D25; cursor: pointer; }
+.searchButton:hover { background-color: hsl(248, 48%, 40%); }
+.searchIcon { font-size: 14px; color: #ECEBF5; }
+.cartIcon { margin: 0 30px; font-size: 30px; color: #ECEBF5; cursor: pointer; }
