--- a/src/pages/BuyerRegister/style.module.css
+++ b/src/pages/BuyerRegister/style.module.css
@@ -1,6 +1,6 @@
 .container { min-width: 1200px; }
 /* Main */
-.main { height: calc(100vh - var(--header-heaight)); padding: 0 240px; display: flex; justify-content: space-between; align-items: center; background-color: #100D25; }
+.main { min-height: calc(100vh - var(--header-heaight)); padding: 0 240px; display: flex; justify-content: space-between; align-items: center; background-color: #100D25; }
 .mainContainer { margin: auto; display: flex; }
 .mainLogo { width: 400px; height: 450px; object-fit: contain; }
 .loginContainer { width: 400px; height: 450px; margin-left: 80px; padding: 0 30px; background-color: #ECEBF5; border-radius: 5px; }
