--- a/src/components/Sign/Form/style.module.css
+++ b/src/components/Sign/Form/style.module.css
@@ -10,5 +10,6 @@
 /* Toggle Password */
 .checkContainer, .eyeContainer { position: absolute; right: 10px; top: 50%; transform: translateY(-50%); }
 .eye { font-size: 18px; cursor: pointer; }
-.loginSubmit { width: 100%; height: 40px; color: #ECEBF5; background-color: #100D25; border: 0; cursor: pointer; }
+.submit { width: 100%; height: 40px; color: #ECEBF5; background-color: #100D25; border: 0; cursor: pointer; }
 .notAllowed { cursor: not-allowed; }
+.allowed:hover { background-color: hsl(248, 48%, 40%) }
