--- a/src/pages/RegisterPhone/style.module.css
+++ b/src/pages/RegisterPhone/style.module.css
@@ -26,6 +26,8 @@
 .otpInput::-webkit-inner-spin-button,
 .otpInput::-webkit-outer-spin-button { display: none; }
 .otpInput:focus { outline: 3px solid #00b991; outline-offset: 2px; }
+.otherVerification { height: 40px; display: flex; flex-direction: column; justify-content: center; align-items: center; }
+.countDown { color: gray; text-align: center; }
 .otherText { text-align: center; }
-.cardSubmit { height: 40px; margin-top: 45px; font-weight: 700; border-radius: 5px; color: #ECEBF5; background-color: #100D25; display: flex; justify-content: center; align-items: center; cursor: pointer; }
+.cardSubmit { height: 40px; margin-top: 30px; font-weight: 700; border-radius: 5px; color: #ECEBF5; background-color: #100D25; display: flex; justify-content: center; align-items: center; cursor: pointer; }
 .cardSubmit:hover { background-color: hsl(248, 48%, 40%); }
