add /verify/otp request in RegisterPhone page
- error hanlding, show error message when otp is incorrect.

--- a/src/pages/RegisterPhone/style.module.css
+++ b/src/pages/RegisterPhone/style.module.css
@@ -30,4 +30,5 @@
 .countDown { color: gray; text-align: center; }
 .otherText { text-align: center; }
 .cardSubmit { height: 40px; margin-top: 30px; font-weight: 700; border-radius: 5px; color: #ECEBF5; background-color: #100D25; display: flex; justify-content: center; align-items: center; cursor: pointer; }
-.cardSubmit:hover { background-color: hsl(248, 48%, 40%); }
+.notAllowed { cursor: not-allowed; }
+.allowed:hover { background-color: hsl(248, 48%, 40%) }
