--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -9,13 +9,13 @@
 .profileLink:hover { filter: brightness(70%); }
 .avatar { width: 20px; height: 20px; border-radius: 50%; object-fit: contain; }
 .username { margin-left: 10px; }
-.homeLink { height: 70px; }
+.homeLink { height: 70px; margin-right: 20px; }
 .headerLogo { height: 70px; object-fit: contain; }
 .headerSearch { width: 1216px; height: 85px; margin: 0 auto; display: flex; justify-content: center; align-items: center; }
-.searchContainer { width: 840px; height: 40px; display: flex; justify-content: space-between; align-items: center; background-color: #ECEBF5; }
-.searchInput { width: 100%; height: 100%; padding: 0 10px; font-size: 14px; border: none; background-color: #ECEBF5; }
+.searchContainer { width: 840px; height: 40px; border-radius: 5px; display: flex; justify-content: space-between; align-items: center; background-color: #ECEBF5; }
+.searchInput { width: 100%; height: 100%; padding: 0 10px; border-radius: 5px; font-size: 14px; border: none; background-color: #ECEBF5; }
 .searchInput:focus { outline: none; }
-.searchButton { width: 60px; height: 34px; margin: 5px; padding: 15px 0; display: flex; justify-content: center; align-items: center; background-color: #100D25; cursor: pointer; }
+.searchButton { width: 60px; height: 34px; margin: 5px; padding: 15px 0; border-radius: 5px; display: flex; justify-content: center; align-items: center; background-color: #100D25; cursor: pointer; }
 .searchButton:hover { background-color: hsl(248, 48%, 40%); }
 .searchIcon { font-size: 14px; color: #ECEBF5; }
 .cartIcon { margin: 0 30px; font-size: 30px; color: #ECEBF5; cursor: pointer; }
