--- a/src/components/Footer/style.module.css
+++ b/src/components/Footer/style.module.css
@@ -3,7 +3,25 @@
 .payment, .logistic, .socialMedia { width: 360px; }
 .catName { margin-bottom: 10px; }
 .images { height: 60px; margin-bottom: 10px; display: flex; justify-content: space-evenly; }
-.image { width: 80px; padding: 5px; background-color: white; border-radius: 10px; object-fit: contain; cursor: pointer; }
+.image { width: 80px; padding: 5px; background-color: white; border: 2px solid gray; border-radius: 10px; object-fit: contain; cursor: pointer; }
 .link { display: flex; justify-content: center; align-items: center; }
-.icon { width: 100px; font-size: 50px; }
+.icon { width: 80px; font-size: 50px; }
 .companyInfo { height: 50px; padding-top: 10px; color: gray; border-top: 1px solid gray; display: flex; justify-content: space-evenly; align-items: center; }
+@media (min-width: 1040px) and (max-width: 1300px) {
+ .payment, .logistic, .socialMedia { width: 300px; }
+.image, .icon { width: 60px; }
+ }
+@media (min-width: 800px) and (max-width: 1040px) {
+ .footer { padding: 10px 100px; }
+.payment, .logistic, .socialMedia { width: 260px; }
+.images { height: 50px; }
+.image, .icon { width: 50px; }
+ }
+@media (max-width: 800px) {
+ .footer { padding: 10px 40px; }
+.platformInfo { flex-direction: column; align-items: center; }
+.payment, .logistic, .socialMedia { width: 300px; }
+.images { height: 60px; }
+.image, .icon { width: 60px; }
+.companyInfo { height: 80px; flex-direction: column; }
+ }
