--- a/src/components/Sign/Header/style.module.css
+++ b/src/components/Sign/Header/style.module.css
@@ -1,4 +1,7 @@
 :root { --header-heaight: 85px }
 .header { height: var(--header-heaight); padding: 0 160px; background-color: #ECEBF5; display: flex; justify-content:left; align-items: center; }
 .headerLogo { height: 70px; cursor: pointer; }
-.pageName { margin-left: 10px; font-size: 24px; font-weight: 700; }
+.pageName { min-width: 48px; margin-left: 10px; font-size: 24px; font-weight: 700; }
+@media (max-width: 600px) {
+ .header { justify-content: center; }
+ }
