--- a/src/pages/SignUp/Step1/style.module.css
+++ b/src/pages/SignUp/Step1/style.module.css
@@ -1,17 +1,37 @@
 .container { min-width: 1200px; }
 /* Main */
-.main { min-height: calc(100vh - var(--header-heaight)); padding: 0 240px; display: flex; justify-content: space-between; align-items: center; background-color: #100D25; }
-.mainContainer { margin: auto; display: flex; }
-.mainLogo { width: 400px; height: 450px; object-fit: contain; }
-.loginContainer { width: 400px; height: 450px; margin-left: 80px; padding: 0 30px; background-color: #ECEBF5; border-radius: 5px; }
-.loginHeader { padding: 24px 0; font-size: 20px; }
-/* Other Login */
-.otherLogin { margin: 10px 0; font-size: 12px; display: flex; justify-content: space-between; }
-.breakLine { margin: 25px 0 25px; display: flex; }
-.lineContainer { width: 100%; display: flex; align-items: center; }
-.line { width: 100%; height: 1px; background-color: #dbdbdb; }
-.or { padding: 0 16px; font-size: 12px; color: #b4b4b4; }
-/* Login Form: <<<Footer>>> */
-.policy { margin-top: 30px; font-size: 12px; text-align: center; }
-.loginFooter { margin-top: 30px; font-size: 14px; text-align: center; }
-.registerRedirectText { color: #b4b4b4; }
+.main { min-height: calc(100vh - var(--header-heaight)); padding: 50px 0; display: flex; justify-content: center; background-color: #100D25; }
+.mainContainer { width: 500px; }
+.steps { height: 75px; margin-bottom: 60px; display: flex; justify-content: space-between; align-items: center; }
+.step { width: 100px; display: flex; flex-direction: column; align-items: center; }
+.arrow { color: #ECEBF5; }
+.circle, .currentCircle { width: 35px; height: 35px; border-radius: 50%; background-color: #ECEBF5; display: flex; justify-content: center; align-items: center; }
+.circleText,.currentCircleText { font-size: 12px; margin-top: 5px; color: #ECEBF5; }
+.currentCircle { background-color: #FCC30E; }
+.currentCircleText { color: #FCC30E; }
+.verificationCard { padding-bottom: 30px; border-radius: 5px; background-color: #ECEBF5; }
+.cardHeader { height: 80px; margin-right: 80px; display: flex; justify-content: center; align-items: center; }
+.back { width: 80px; font-size: 26px; text-align: center; cursor: pointer; }
+.back:hover { color:hsl(0, 0%, 30%); }
+.cardName { width: 420px; font-size: 20px; text-align: center; }
+.cardMain { margin: 0 80px; }
+.errorMessage { margin-bottom: 30px; padding: 12px 15px; background-color: #ffdae0; border: 1px solid #ff424f33; display: flex; }
+.crossIcon { margin-right: 10px; color: red; }
+.message { font-size: 14px; }
+.cardText { margin: 10px 0; }
+.text { font-size: 14px; margin-bottom: 10px; text-align: center; }
+.phone { font-size: 16px; letter-spacing: 2px; text-align: center; }
+.otpContainer { margin: 20px 0 20px; }
+.inputFields { display: flex; flex-direction: row; justify-content: space-evenly; }
+.otpInput { max-width: 50px; height: 60px; font-size: 25px; text-align: center; border-radius: 5px; border: none; background: gray; }
+.otpInput::-webkit-inner-spin-button,
+.otpInput::-webkit-outer-spin-button { display: none; }
+.otpInput:focus { outline: 3px solid #00b991; outline-offset: 2px; }
+.otherVerification { height: 40px; display: flex; flex-direction: column; justify-content: center; align-items: center; }
+.countDown { color: gray; text-align: center; }
+.otherText { text-align: center; }
+.otherText span { color: #219ebc; text-decoration: none; cursor: pointer; }
+.otherText span:hover { filter: brightness(70%); }
+.submit { height: 40px; margin-top: 30px; font-weight: 700; border-radius: 5px; color: #ECEBF5; background-color: #100D25; display: flex; justify-content: center; align-items: center; cursor: pointer; }
+.notAllowed { cursor: not-allowed; }
+.allowed:hover { background-color: hsl(248, 48%, 40%) }
