--- a/src/pages/SignUp/Step1/style.module.css
+++ b/src/pages/SignUp/Step1/style.module.css
@@ -1,14 +1,5 @@
-.container { min-width: 1200px; }
-/* Main */
 .main { min-height: calc(100vh - var(--header-heaight)); padding: 50px 0; display: flex; justify-content: center; background-color: #100D25; }
 .mainContainer { width: 500px; }
-.steps { height: 75px; margin-bottom: 60px; display: flex; justify-content: space-between; align-items: center; }
-.step { width: 100px; display: flex; flex-direction: column; align-items: center; }
-.arrow { color: #ECEBF5; }
-.circle, .currentCircle { width: 35px; height: 35px; border-radius: 50%; background-color: #ECEBF5; display: flex; justify-content: center; align-items: center; }
-.circleText,.currentCircleText { font-size: 12px; margin-top: 5px; color: #ECEBF5; }
-.currentCircle { background-color: #FCC30E; }
-.currentCircleText { color: #FCC30E; }
 .verificationCard { padding-bottom: 30px; border-radius: 5px; background-color: #ECEBF5; }
 .cardHeader { height: 80px; margin-right: 80px; display: flex; justify-content: center; align-items: center; }
 .back { width: 80px; font-size: 26px; text-align: center; cursor: pointer; }
@@ -21,9 +12,9 @@
 .cardText { margin: 10px 0; }
 .text { font-size: 14px; margin-bottom: 10px; text-align: center; }
 .phone { font-size: 16px; letter-spacing: 2px; text-align: center; }
-.otpContainer { margin: 20px 0 20px; }
+.otpContainer { margin: 20px 0; }
 .inputFields { display: flex; flex-direction: row; justify-content: space-evenly; }
-.otpInput { max-width: 50px; height: 60px; font-size: 25px; text-align: center; border-radius: 5px; border: none; background: gray; }
+.otpInput { width: 50px; height: 60px; font-size: 25px; text-align: center; border-radius: 5px; border: none; background: gray; }
 .otpInput::-webkit-inner-spin-button,
 .otpInput::-webkit-outer-spin-button { display: none; }
 .otpInput:focus { outline: 3px solid #00b991; outline-offset: 2px; }
@@ -35,3 +26,11 @@
 .submit { height: 40px; margin-top: 30px; font-weight: 700; border-radius: 5px; color: #ECEBF5; background-color: #100D25; display: flex; justify-content: center; align-items: center; cursor: pointer; }
 .notAllowed { cursor: not-allowed; }
 .allowed:hover { background-color: hsl(248, 48%, 40%) }
+@media (max-width: 650px) {
+ .mainContainer { width: 340px; justify-content: center; }
+.cardHeader { margin-right: 40px; }
+.back { width: 40px; padding-left: 20px; }
+.cardName { width: 300px; }
+.cardMain { margin: 0 40px; }
+.otpInput { width: 35px; height: 50px; font-size: 20px;}
+ }
