--- a/src/components/Sign/SignCard/Form/style.module.css
+++ b/src/components/Sign/SignCard/Form/style.module.css
@@ -1,3 +1,3 @@
 .submit { width: 100%; height: 40px; font-size: 16px; font-weight: 700; color: #ECEBF5; background-color: #100D25; border: 0; cursor: pointer; }
-.notAllowed { cursor: not-allowed; }
+.notAllowed { background-color: gray; cursor: not-allowed; }
 .allowed:hover { background-color: hsl(248, 48%, 40%) }
