--- a/src/pages/SignUp/Step1/style.module.css
+++ b/src/pages/SignUp/Step1/style.module.css
@@ -1,6 +1,6 @@
 .main { min-height: calc(100vh - var(--header-heaight)); padding: 50px 0; display: flex; justify-content: center; background-color: #100D25; }
 .mainContainer { width: 500px; }
-.verificationCard { padding-bottom: 30px; border-radius: 5px; background-color: #ECEBF5; }
+.card { padding-bottom: 30px; border-radius: 5px; background-color: #ECEBF5; }
 .cardHeader { height: 80px; margin-right: 80px; display: flex; justify-content: center; align-items: center; }
 .back { width: 80px; font-size: 26px; text-align: center; cursor: pointer; }
 .back:hover { color:hsl(0, 0%, 30%); }
@@ -24,7 +24,7 @@
 .otherText span { color: #219ebc; text-decoration: none; cursor: pointer; }
 .otherText span:hover { filter: brightness(70%); }
 .submit { height: 40px; margin-top: 30px; font-weight: 700; border-radius: 5px; color: #ECEBF5; background-color: #100D25; display: flex; justify-content: center; align-items: center; cursor: pointer; }
-.notAllowed { cursor: not-allowed; }
+.notAllowed { background-color: gray; cursor: not-allowed; }
 .allowed:hover { background-color: hsl(248, 48%, 40%) }
 @media (max-width: 650px) {
  .mainContainer { width: 340px; justify-content: center; }
