--- a/src/pages/SignUp/Step2/style.module.css
+++ b/src/pages/SignUp/Step2/style.module.css
@@ -1,16 +1,6 @@
-.container { min-width: 1200px; }
-/* Main */
 .main { min-height: calc(100vh - var(--header-heaight)); padding: 50px 0; display: flex; justify-content: center; background-color: #100D25; }
 .mainContainer { width: 500px; }
-.steps { height: 75px; margin-bottom: 60px; display: flex; justify-content: space-between; align-items: center; }
-.step { width: 100px; display: flex; flex-direction: column; align-items: center; }
-.arrow { color: #ECEBF5; }
-.currentArrow { color: #FCC30E; }
-.circle, .currentCircle { width: 35px; height: 35px; border-radius: 50%; background-color: #ECEBF5; display: flex; justify-content: center; align-items: center; }
-.circleText,.currentCircleText { font-size: 12px; margin-top: 5px; color: #ECEBF5; }
-.currentCircle { background-color: #FCC30E; }
-.currentCircleText { color: #FCC30E; }
-.verificationCard { padding-bottom: 30px; border-radius: 5px; background-color: #ECEBF5; }
+.card { padding-bottom: 30px; border-radius: 5px; background-color: #ECEBF5; }
 .cardHeader { height: 80px; margin-right: 80px; display: flex; justify-content: center; align-items: center; }
 .back { width: 80px; font-size: 26px; text-align: center; cursor: pointer; }
 .back:hover { color:hsl(0, 0%, 30%); }
@@ -26,7 +16,17 @@
 .criteriaText { margin-top: 8px; color: gray; }
 .icon { margin: 0 5px }
 .submit { height: 40px; margin-top: 30px; font-weight: 700; border-radius: 5px; color: #ECEBF5; background-color: #100D25; display: flex; justify-content: center; align-items: center; cursor: pointer; }
-.notAllowed { cursor: not-allowed; }
+.notAllowed { background-color: gray; cursor: not-allowed; }
 .allowed:hover { background-color: hsl(248, 48%, 40%) }
 .valid { color: green; }
 .invalid { color: red; }
+@media (max-width: 650px) {
+  .mainContainer { width: 340px; justify-content: center; }
+ .cardHeader { margin-right: 40px; }
+ .back { width: 40px; padding-left: 20px; }
+ .cardName { width: 300px; }
+ .cardMain { margin: 0 40px; }
+ .text { font-size: 14px;}
+ .criteriaText { font-size: 14px; }
+  }
+ 
