--- a/src/components/Sign/SignCard/Form/style.module.css
+++ b/src/components/Sign/SignCard/Form/style.module.css
@@ -1,3 +1,6 @@
+.errorMessage { margin-bottom: 30px; padding: 12px 15px; background-color: #ffdae0; border: 1px solid #ff424f33; display: flex; }
+.crossIcon { margin-right: 10px; color: red; }
+.message { font-size: 14px; }
 .submit { width: 100%; height: 40px; font-size: 16px; font-weight: 700; color: #ECEBF5; background-color: #100D25; border: 0; cursor: pointer; }
 .notAllowed { background-color: gray; cursor: not-allowed; }
 .allowed:hover { background-color: hsl(248, 48%, 40%) }
