--- a/src/pages/SignIn/Step1/style.module.css
+++ b/src/pages/SignIn/Step1/style.module.css
@@ -1,8 +1,8 @@
 .main { min-height: calc(100vh - var(--header-heaight)); padding: 50px 0; display: flex; justify-content: center; background-color: #100D25; }
 .mainContainer { width: 500px; }
-.card { margin-top: 75px; padding-bottom: 30px; border-radius: 5px; background-color: #ECEBF5; }
+.card { margin-top: 75px; padding-bottom: 30px; border-radius: 5px; background-color: #ECEBF5; position: relative; }
 .cardHeader { height: 80px; margin-right: 80px; display: flex; justify-content: center; align-items: center; }
-.back { width: 80px; font-size: 26px; text-align: center; cursor: pointer; }
+.back { width: 80px; font-size: 26px; text-align: center; cursor: pointer; position: absolute; left: 0; }
 .back:hover { color:hsl(0, 0%, 30%); }
 .cardName { width: 420px; font-weight: 700; font-size: 20px; text-align: center; }
 .cardMain { margin: 0 80px; }
@@ -28,8 +28,7 @@
 .allowed:hover { background-color: hsl(248, 48%, 40%) }
 @media (max-width: 650px) {
  .mainContainer { width: 340px; justify-content: center; }
-.cardHeader { margin-right: 40px; }
-.back { width: 40px; padding-left: 20px; }
+.back { font-size: 20px; width: 40px; }
 .cardName { width: 300px; }
 .cardMain { margin: 0 40px; }
 .otpInput { width: 35px; height: 50px; font-size: 20px;}
