--- a/src/pages/SignUp/Step4/style.module.css
+++ b/src/pages/SignUp/Step4/style.module.css
@@ -1,6 +1,6 @@
 .main { min-height: calc(100vh - var(--header-heaight)); padding: 50px 0; display: flex; justify-content: center; background-color: #100D25; }
 .mainContainer { width: 500px; }
-.card { padding-bottom: 30px; border-radius: 5px; background-color: #ECEBF5; }
+.card { padding-bottom: 30px; margin-top: 35px; border-radius: 5px; background-color: #ECEBF5; }
 .cardHeader { height: 80px; display: flex; justify-content: center; align-items: center; }
 .cardName { width: 340px; font-weight: 700; font-size: 20px; text-align: center; }
 .cardMain { margin: 0 80px; display: flex; flex-direction: column; justify-content: center; }
