add NotFound page & set axios baseURL

--- a/src/components/Elements/Anchor/style.module.css
+++ b/src/components/Elements/Anchor/style.module.css
@@ -1,2 +1,2 @@
-.a { color: #219ebc; text-decoration: none; cursor: pointer; }
-.a:hover { filter: brightness(70%); }
+.anchor { color: #219ebc; text-decoration: none; cursor: pointer; }
+.anchor:hover { filter: brightness(70%); }
