--- a/src/pages/NotFound/style.module.css
+++ b/src/pages/NotFound/style.module.css
@@ -2,9 +2,9 @@
 .section { width: 70%; min-width: 400px; padding: 20px; display: flex; flex-direction: column; align-items: center; border-radius: 10px; background-color: #ECEBF5; }
 .title { margin: 30px 0; font-size: 100px; }
 .text { margin: 30px 0; font-size: 60px; }
-.redirect { color: blue; padding: 10px; margin: 30px 0; border-radius: 10px; border: 2px solid #100d25; font-size: 60px; background-color: rgb(188, 188, 255); }
+.redirect { padding: 10px; margin: 30px 0; font-size: 25px; font-weight: 700; color: blue; border-radius: 10px; border: 2px solid #100d25; background-color: rgb(188, 188, 255); }
 @media (max-width: 850px) {
  .title { margin: 30px 0; font-size: 80px; }
 .text { font-size: 40px; }
-.redirect { font-size: 40px; }
+.redirect { font-size: 20px; }
  }
